# MLOps_project

./: .gitignore  .pre-commit-config.yaml  README.md  info.txt  pyproject.toml  triton_report.md
.dvc/: config
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: config.yaml
config/data/: iris.yaml
data/: test.csv.dvc  train.csv.dvc
inference_server/: run_server.py
iris_classifier/: .gitignore  config.py  infer.py  optional_functions.py  project_metrics.py  run_mlflow_model.py  train.py
iris_log_reg/: constants.py  infer.py  train.py
iris_log_reg/data/Iris/: test.csv  train.csv
model_result/: .gitignore  prediction.csv  trained_model.sav
outputs/2024-01-29/14-48-08/.hydra/: hydra.yaml
outputs/2024-01-29/14-49-14/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-29/15-21-00/.hydra/: hydra.yaml
outputs/2024-01-29/15-21-16/.hydra/: hydra.yaml
outputs/2024-01-29/15-21-28/.hydra/: hydra.yaml
outputs/2024-01-29/15-21-54/.hydra/: hydra.yaml
outputs/2024-01-29/15-23-28/.hydra/: hydra.yaml
outputs/2024-01-29/15-23-42/.hydra/: hydra.yaml
outputs/2024-01-29/15-24-42/.hydra/: hydra.yaml  overrides.yaml
outputs/2024-01-29/15-30-16/.hydra/: hydra.yaml
outputs/2024-01-29/15-30-56/.hydra/: config.yaml  hydra.yaml
tracking_server/: .env  .gitignore  create_server.py  docker-compose.yml  info.txt  run_example.py
triton_inference_server/: client.py  docker-compose.yaml
triton_inference_server/model_repository/onnx_classifier/: config.pbtxt
(+26 files in other folders)
