[tool.poetry]
name = "iris-log-reg"
version = "0.1.0"
description = ""
authors = ["danil-tr <daniltrvit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pandas = "^2.2.0"
joblib = "^1.3.2"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
